syntax = "proto3";

import "google/protobuf/timestamp.proto";

package order.v1;
option go_package = "./;pb";

service OrderServiceV1 {
  // Create new Order
  rpc CreateOrder (CreateOrderRequestV1) returns (CreateOrderResponseV1) {}
  // Get Order list
  rpc ListOrder (ListOrderRequestV1) returns (ListOrderResponseV1) {}
  //Get Order by ID
  rpc GetOrder (GetOrderRequestV1) returns (GetOrderResponseV1) {}
  //Update Order status by ID
  rpc UpdateOrderStatus (UpdateOrderStatusRequestV1) returns (UpdateOrderStatusResponseV1) {}
  // Remove Order by ID
  rpc DeleteOrder (DeleteOrderRequestV1) returns (DeleteOrderResponseV1) {}
}
service OrderServiceV2{}

message Order {
  uint32 order_id = 1;
  uint32 user_id = 2;
  string product_name = 3;
  string status = 4;
  uint32 quantity = 5;
  google.protobuf.Timestamp order_date = 6;
}

message CreateOrderRequestV1 {
  uint32 order_id = 1;
  uint32 user_id = 2;
  string product_name = 3;
  uint32 quantity = 4;
}

message CreateOrderResponseV1 {
  uint32 order_id = 1;
}


message ListOrderRequestV1 {}

message ListOrderResponseV1 {
  repeated Order Orders = 1;
}


message GetOrderRequestV1 {
  uint32 order_id = 1;
}

message GetOrderResponseV1 {
  Order order = 1;
}


message UpdateOrderStatusRequestV1 {
  uint32 order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponseV1 {
  bool is_ok = 1;
}


message DeleteOrderRequestV1 {
  uint32 order_id = 1;
}

message DeleteOrderResponseV1 {
  bool is_ok = 1;
}

